Added CSS and hover

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <div class="container">
-        <h1 class="col-md-4">Pet Store</h1>
+    <div class="container header">
+        <h1 class="col-md-4 ">Pet Store</h1>
     </div>
 <!-- ============this is a table========= -->
-    <div class="container holds-table">
-      <table class="table table-hover">
+    <div class="container col-md-10 col-md-offset-2 holds-table">
+      <table class="table ">
         <thead>
           <tr>
             <th>Photo</th>
@@ -47,11 +47,11 @@
     </div>
     <hr />
 <!-- ============Add a pet section======== -->
-    <div class="container">
+    <div class="container form-header">
       <h2 class="col-md-4">Add Pet</h2>
     </div>
-    <div class="container">
-      <form class="col-md-8" action="" method="post">
+    <div class="container holds-add">
+      <form class="col-md-9" action="" method="post">
         <div class="form-group">
           <label>Photo</label>
           <input type="text" class="form-control" value="" />
