--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <div class="container header">
+   <div class="container wrapper">
+    <div class="row header">
         <h1 class="col-md-4 ">Pet Store</h1>
     </div>
 <!-- ============this is a table========= -->
-    <div class="container col-md-10 col-md-offset-2 holds-table">
-      <table class="table ">
+    <div class="row holds-table col-md-12">
+      <table class="table" >
         <thead>
           <tr>
             <th>Photo</th>
@@ -37,35 +38,36 @@
             <td><input type="button" name="" id="" value="Get" class="btn btn-success btn-lg"/></td>
           </tr>
           <tr>
-            <td><img src="http://i.imgur.com/uLNGLeu.jpg" alt="Nom nom nom" /></td>
-            <td>Peter Pettigrew</td>
-            <td>Rat</td>
+            <td><img src="http://i.imgur.com/ERGfKM5.jpg" alt="A sloth" /></td>
+            <td>Sleepy</td>
+            <td>Sloth</td>
             <td><input type="button" name="" id="" value="Get" class="btn btn-success btn-lg"/></td>
           </tr>
         </tbody>
       </table>
     </div>
+    <!-- ============Add a pet section======== -->
     <hr />
-<!-- ============Add a pet section======== -->
-    <div class="container form-header">
+    <div class="row form-header">
       <h2 class="col-md-4">Add Pet</h2>
     </div>
-    <div class="container holds-add">
-      <form class="col-md-9" action="" method="post">
+    <div class="row holds-add">
+      <form class="" action="" method="post">
         <div class="form-group">
           <label>Photo</label>
-          <input type="text" class="form-control" value="" />
+          <input type="text" class="form-control" placeholder="Paste img URL here" />
         </div>
         <div class="form-group">
           <label>Name</label>
-          <input type="text" class="form-control" value="" />
+          <input type="text" class="form-control" placeholder="What's your pet's name?" />
         </div>
         <div class="form-group">
           <label>Species</label>
-          <input type="text" class="form-control" value="" />
+          <input type="text" class="form-control" placeholder="Species..." />
         </div>
         <button type="submit" class="btn btn-primary btn-lg">Save</button>
       </form>
     </div>
+   </div>
   </body>
 </html>
